--- a/cs50finance/templates/generate/index.html
+++ b/cs50finance/templates/generate/index.html
@@ -1,9 +1,9 @@
 
 <h3>Chill ur file is being generated</h3>
-{% if ph %}
-<h3>{{ ph.name }}</h3>
-<h3>{{ ph.id }}</h3>
-<h3>{{ ph.img_file.path }}</h3>
-<h3>{{ ph.img_file.url }}</h3>
-<img src="{{ ph.img_file.url }}" alt="{{ ph.name}}">
+{% if pulled_img %}
+<h3>{{ pulled_img.name }}</h3>
+<h3>{{ pulled_img.id }}</h3>
+<h3>{{ pulled_img.img_file.path }}</h3>
+<h3>{{ pulled_img.img_file.url }}</h3>
+<img src="{{ pulled_img.img_file.url }}" alt="{{ pulled_img.name}}">
 {% endif %}
