--- a/cs50finance/templates/home/index.html
+++ b/cs50finance/templates/home/index.html
@@ -8,8 +8,8 @@
       <img src="{% static 'assets/Trust.svg' %}" />
     </div>
     <div class="mid-links">
-      <a href="{% url 'login' %}">Login</a>
-      <a href="{% url 'register' %}">Register</a>
+      <a href="{% url 'accounts:login' %}">Login</a>
+      <a href="{% url 'accounts:register' %}">Register</a>
     </div>
   </div>
 {% endblock %}
