--- a/cs50finance/templates/accounts/login.html
+++ b/cs50finance/templates/accounts/login.html
@@ -7,7 +7,7 @@
 
 {% block main %}
     <h1>Login Here</h1>
-    <form novalidate action="{% url 'login' %}" method="POST">
+    <form novalidate action="{% url 'accounts:login' %}" method="POST">
         {% csrf_token %}
         {% if messages %}
         {% for message in messages %}
