--- a/cs50finance/static/style.css
+++ b/cs50finance/static/style.css
@@ -144,6 +144,21 @@ form p{
     font-size: 14px;
     display: none;
 }
+.favicons{
+    display: flex;
+    flex-direction: row;
+    margin-top: 20px;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    box-shadow: 1px 2px 5px 2px black;
+}
+.favicons form{
+    margin-top: 0;
+}
+.favicons *:not(:first-child){
+    margin-left: 20px;
+}
 .error{
     color: #dc3545
 }
@@ -167,6 +182,9 @@ form button, .dashboard button, .m-dashboard button{
 }
 form button{
     margin-top: 20px;
+}
+.favicons button{
+    margin-top: 0;
 }
 form button:hover{
     background: blue;
